// Copyright 2018 Intel Corporation
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
// -----------------------------------------------------------------------------

syntax = "proto3";


message SimpleSupplyPayload{
    enum Action {
        CREATE_AGENT = 0;
        CREATE_RECORD = 1;
        UPDATE_RECORD = 2;
        TRANSFER_RECORD = 4;
    }

    // Whether the payload contains a create agent, create record,
    // update record, or transfer record action
    Action action = 1;

    // The transaction handler will read from just one of these fields
    // according to the action
    CreateAgentAction create_agent = 2;
    CreateRecordAction create_record = 3;
    UpdateRecordAction update_record = 4;
    CreateBidAction create_bid = 5;
    TransferRecordAction transfer_record = 6;

    // Approximately when transaction was submitted, as a Unix UTC timestamp
    string timestamp = 7;
}


message CreateAgentAction {
    // A human-readable name identifying the new agent
    string name = 1;
}


message CreateRecordAction {
    // The user-defined natural key which identifies the object in the
    // real world (for example a serial number)
    string record_id = 1;

    // title is a description of the product
    string title = 2;

    // initial price of the record
    uint64 price = 3;

    // Coordinates are expected to be in millionths of a degree
    sint64 latitude = 4;
    sint64 longitude = 5;
}


message UpdateRecordAction {
    // The id of the record being updated
    string record_id = 1;

    // Coordinates are expected to be in millionths of a degree
    sint64 latitude = 2;
    sint64 longitude = 3;
}

message CreateBidAction {
    // The id of the record being updated
    string record_id = 1;

    sint64 price = 2;
}

message TransferRecordAction {
    // The id of the record for the ownership transfer
    string record_id = 1;

    // The public key of the agent to which the record will be transferred
    string receiving_agent = 2;

    // final price of the transfer
    sint64 price = 3;
}
